# zero

./: .buildinfo  .gitignore  LICENSE  README.md  compare.py  default.nix  extra.txt  genindex.html  index.html  objects.inv  plot.py  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.py  test_zero.py
.github/workflows/: docs.yml  main.yml  publish.yml
_modules/: index.html
_modules/zero/: als.html  als2.html  als3.html  balse.html  chrono.html  dataset.html  efa.html  gbr.html  knn.html  knn0.html  knn2.html  lasso.html  lasso0.html  pca.html  recommendation_algorithm.html  sgd.html  sgd0.html  sgd2.html  side.html  svd.html  svd2.html  xals.html  zero.html
_modules/zero/tests/: test_zero.html
_sources/: quickstart.rst.txt
_sources/source/: modules.rst.txt  zero.rst.txt  zero.tests.rst.txt
aggregation/: .gitignore  Cargo.toml  default.nix  packages.nix
aggregation/pylib/: Cargo.toml  aggregation.pyi  api.rst  conf.py  default.nix  index.rst  mangaki_zero_aggregation.pyi
aggregation/pylib/pytest/: test.py
aggregation/pylib/src/: lib.rs
aggregation/pylib/tests/: test_main.py
aggregation/rustlib/: Cargo.toml  default.nix
aggregation/rustlib/src/: helpers.rs  lib.rs  main.rs  server.rs  sodium_bindings.rs  types.rs  user.rs
aggregation/rustlib/tests/: tests.rs
aggregation/src/: helpers.rs  lib.rs  main.rs  server.rs  sodium_bindings.rs  types.rs  user.rs
aggregation/wasmlib/: Cargo.toml  default.nix  shell.nix
aggregation/wasmlib/src/: lib.rs
docs/: Makefile  conf.py  index.rst
docs/source/: modules.rst  zero.aggregation.rst  zero.rst  zero.tests.rst
experiments/: default.json  default.json~
source/: modules.html  zero.aggregation.html  zero.html  zero.tests.html
zero/: __init__.py  aggregation.py  als.py  als2.py  als3.py  balse.py  cfm.py  chrono.py  dataset.py  efa.py  fit_algo.py  fma.py  gbr.py  knn.py  knn0.py  knn2.py  lasso.py  nmf.py  pca.py  recommendation_algorithm.py  sgd.py  sgd0.py  sgd2.py  side.py  ssvd.py  svd.py  svd1.py  svd2.py  svdknn.py  values.py  wals.py  xals.py  zero.py
zero/tests/: test_zero.py
