[tool.poetry]
name = "mangaki-zero"
version = "1.1.0"
description = "Mangaki's recommandation algorithms"
authors = ["Jill-Jênn Vie <vie@jill-jenn.net>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "http://research.mangaki.fr"
documentation = "https://github.com/mangaki/zero"
keywords = ["machine learning", "recommandation", "mangaki", "recommender systems", "algorithms"]

packages = [
  { include = "zero" }
]


[tool.poetry.dependencies]
python = ">=3.7.1"
numpy = "^1.20"
pandas = "^1.3,<1.3.4"

scikit-learn = { version="^1.0" }
tensorflow = { version="*", optional = true }
fastFM = { version="*", optional = true }
pywFM = { version="*", optional = true }
surprise = { version="*", optional = true }
scipy = "^1.4"

mangaki-zero-aggregation = { version="^0.1", optional = true }

[tool.poetry.extras]
deep = ["tensorflow"]
external = ["surprise"]
fm = ["fastFM", "pywFM"]
secure-aggregation = [ "mangaki-zero-aggregation" ]

[tool.poetry.dev-dependencies]
matplotlib = "^3.1"
pytest = "^5.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
