[project]
name = "mangaki-zero"
version = "1.2.1"
description = "Mangaki's recommendation algorithms"
readme = "README.md"
authors = [
    {name = "Jill-Jênn Vie", email = "vie@jill-jenn.net"}
]
license = "MIT"
keywords = ["machine learning", "recommendation", "mangaki", "recommender systems", "algorithms"]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pandas>2",
    "scikit-learn>=1.0",
    "tensorflow",
    "pywFM",
    "surprise",
    "scipy>=1.9",
    "matplotlib"
]

[project.urls]
homepage = "https://research.mangaki.fr"
documentation = "https://mangaki.github.io/zero/"
repository = "https://github.com/mangaki/zero"

[tool.poetry]
name = "mangaki-zero"
version = "1.2.1"
description = "Mangaki's recommendation algorithms"
authors = ["Jill-Jênn Vie <vie@jill-jenn.net>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "zero", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.23"
pandas = ">2"
scikit-learn = "^1.0"
scipy = "^1.9"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.1"
pytest = "^7.1"

[tool.poetry.group.optional.dependencies]
tensorflow = "*"
fastFM = "*"
pywFM = "*"
surprise = "*"
mangaki-zero-aggregation = "^0.1"

[tool.poetry.extras]
deep = ["tensorflow"]
external = ["surprise"]
fm = ["fastFM", "pywFM"]
secure-aggregation = ["mangaki-zero-aggregation"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
