[package]
name = "r-mangaki-zero-aggregation"
version = "0.1.0"
edition = "2021"

[lib]
name = "aggregation"
path = "src/lib.rs"

[dependencies]
libsodium-sys-stable = "^1.19.19"
sss-rs = "^0.9.0"
x25519-dalek = "^1.2.0"
rand_core = "^0.5"
rand = "^0.8.4"
rand_chacha = "^0.3.1"
getrandom = "^0.2.4"
bincode = "^1.3.3"
serde = { version = "1.0.63", features = [ "derive" ] }
serde-big-array = "^0.3.2"
serde_json = "^1.0.78"
replace_with = "^0.1.7"
galois_2p8 = "^0.1.2"
